# agent-debate-cli

./: .gitignore  README.md  config.design.yaml  config.example.yaml  config.mock.yaml  config.plan.yaml  pyproject.toml  run.py
.github/workflows/: ci.yml
configs/: example.yaml  review2.yaml
src/: agent.py  config.py  document.py  drivers.py  orchestrator.py  prompts.py  tmuxio.py
tests/: test_pr1.py  test_pr2.py  test_pr3.py
tools/: mock_cli.py
